# SiteSpec-Inspector

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
sitespec_inspector/: __init__.py  cli.py  config.py  core.py  models.py
sitespec_inspector/checkers/: __init__.py  accessibility_checker.py  base_checker.py  html_checker.py  performance_checker.py  security_checker.py  seo_checker.py  wellknown_checker.py
sitespec_inspector/formatters/: __init__.py  console_formatter.py  html_formatter.py  json_formatter.py  markdown_formatter.py
tests/: test_html_checker.py  test_seo_checker.py
