[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sitespec-inspector"
version = "1.0.0"
description = "🔍 轻量级网站规范检测工具 - 自动化检测HTML、SEO、Accessibility、Security等Web标准"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "gitstq"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.0",
    "lxml>=4.9.0",
    "colorama>=0.4.6",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "validators>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
sitespec = "sitespec_inspector.cli:main"

[project.urls]
Homepage = "https://github.com/gitstq/sitespec-inspector"
Repository = "https://github.com/gitstq/sitespec-inspector"
Issues = "https://github.com/gitstq/sitespec-inspector/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sitespec_inspector*"]
exclude = ["tests*"]